Updated unit tests, included log file in git ignore and log4j configurations